--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Oscar's Portfolio</title>
+    <meta name="description" content="Full Stack Web Developer">
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="assets/app.js"></script>
@@ -195,6 +196,7 @@
                         <img src="assets/static/images/bookreviewer.png" class="img-responsive" alt="third project">
                     </a>
                 </div>
+
             </div>
         </div>
     </section>
